--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         }
     ],
     "require": {
-        "yiisoft/yii2": "*"
+        "yiisoft/yii2": "*",
+        "aliyuncs/oss-sdk-php": "*"
     },
     "autoload": {
         "psr-4": {
