--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "yiizh/yii2-storage",
     "description": "The storage extension for Yii2.",
+    "homepage": "https://github.com/yiizh/yii2-storage",
     "type": "yii2-extension",
     "keywords": [
         "yii2",
